# hotspot

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: check.yaml  deploy.yaml
.husky/: pre-commit
.husky/_/: husky.sh
docs/: ARCHITECTURE.md  DEPLOYMENT.md  Privacy Policy.docx  T&Cs.docx  TESTING.md  api-spec.md  entity_relationship.md  openapi.json
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
e2e/tests/: 404.spec.ts  add-parking-location.spec.ts  add-suburb.spec.ts  contact.spec.ts  explore-tab.spec.ts  faq.spec.ts  homepage.spec.ts  resources.spec.ts  saved.spec.ts  suburb-risk-score.spec.ts  suburb-search.spec.ts
src/api/: Makefile  README.md  database.py  db_interface.py  generate_api_docs.py  main.py  models.py  pyproject.toml
src/api/routes/: addresses.py  bikes.py  contact.py  health.py  lgas.py  parking.py  postcodes.py  risk.py  search.py  stats.py
src/api/tests/: README.md  test_address.py  test_basic_endpoints.py  test_contact.py  test_health.py  test_models.py  test_parking.py  test_postcodes.py  test_risk.py  test_search.py  test_statistics.py  test_thefts.py
src/data/: .gitattributes  .gitignore  Crime visualisations.py  ER diagram mermaidJS code.txt  LGA_charges.csv  Makefile  NEW_Model_Risk.csv  Postcode data ETL.py  README.md  VIC_Postcode_Areas.py  create_tables.sql  create_tables.txt  default_risk.csv  model_risk.csv  postcode_risk.csv  safety_score_calculations.txt  suburb_distances.csv  vic_postcodes_area.csv  victorian_addresses.csv  (+1 more)
(+85 files in other folders)
