[project]
name = "hotspot-api"
version = "0.1.0"
description = "API backend for hotspot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "boto3>=1.35.0",
    "requests>=2.31.0",
    "PyGithub>=2.1.0",
    "openapi-markdown>=0.4.3",
]
